samples/_failures_safe/1761147201_1189c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e38a1c4.c: In function ‘main’:
./samples/SAFE/__tmp_7e38a1c4.c:151:28: error: missing terminating " character
  151 |                     printf("Error:
      |                            ^~~~~~~
./samples/SAFE/__tmp_7e38a1c4.c:151:21: error: expected expression at end of input
  151 |                     printf("Error:
      |                     ^~~~~~
./samples/SAFE/__tmp_7e38a1c4.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e38a1c4.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e38a1c4.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e38a1c4.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e38a1c4.c:151:21: error: expected declaration or statement at end of input
